k8s/namespace-blue.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhythm-archive-blue
  labels:
    app: rhythm-archive
    color: blue
