k8s/namespace-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhythm-archive-green
  labels:
    app: rhythm-archive
    color: green
