k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhythm-archive
  labels:
    name: rhythm-archive
    app: rhythm-archive
