k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhythm-archive-service
  namespace: rhythm-archive
  labels:
    app: rhythm-archive
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: rhythm-archive
